# Hypothetical-Assembler-Loader

./: CMakeLists.txt  README.md  buildAndRun.sh
Assembler/: README.md
Assembler/lib/assembler/include/: assembler.h
Assembler/lib/assembler/src/: assembler.cpp
Assembler/src/: main.cpp
Loader/: CMakeLists.txt  README.md  buildAndRun.sh
Loader/include/: chunk.h  objfile.h
Loader/lib/loader/: CMakeLists.txt
Loader/lib/loader/include/: loader.h
Loader/lib/loader/src/: loader.cpp
Loader/lib/loaderargs/: CMakeLists.txt
Loader/lib/loaderargs/include/: loaderargs.h
Loader/lib/loaderargs/src/: loaderargs.cpp
Loader/src/: chunk.cpp  main.cpp  objfile.cpp
Simulator/: CMakeLists.txt  buildAndRun.sh
Simulator/include/: stringUtils.h  utils.h
Simulator/lib/args/src/: args.cpp
Simulator/src/: main.cpp
Simulator/tests/: binComments.asm
assemblyCode/: .gdb_history  calcTest  calcTest.asm  floatBinCalc.py  myfile1.txt  myfile2.txt  q2  q2.asm  run.sh  test2.cpp  test2.s  test3.asm  testStack  testStack.asm  test_basedIndexAddress.asm  test_open_file  test_open_file.asm  test_read_file.asm
assemblyCode/CalculadoraIA32-LucasSchiavini/: README.md  calculadora  calculadora.asm  run.sh
lib/args/include/: args.h
lib/assembler/include/: assembler.h  symboltable.h
lib/assembler/src/: assembler.cpp  symboltable.cpp
src/: main.cpp  stringUtils.cpp  utils.cpp
tests/: bin.asm
